@@ -4,6 +4,7 @@ Changelog
 Version 1.4.0dev1
 
   * man pages
+  * words and characters count live info
 
 Version 1.3.0 - 16.1.2018 7:00
 
